<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="dialog_positive_button" type="id" />
</resources>