<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/home"
        android:title="Home"
        android:icon="@drawable/baseline_home" />
    <item
        android:id="@id/entrantProfile3"
        android:title="Profile"
        android:icon="@drawable/profilepicture" />
    <item
        android:id="@id/entrantEventPage"
        android:title="Events"
        android:icon="@drawable/baseline_library_books" />
</menu>