<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#303030"
    tools:context=".view.organization.OrgAddFacility">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_go_to_home_from_add_facility"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Home"
            android:drawableLeft="@drawable/left_arrow"
            android:drawableTint="@color/white"
            android:backgroundTint="@color/kennyBlue"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="start" />
        <!-- Spacer -->
        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <Button
            android:id="@+id/buttonCreateFacility"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Save"
            android:drawableTint="@color/white"
            android:backgroundTint="@color/kennyBlue"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="end" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"></Space>

    <ImageView
        android:id="@+id/facilityProfileImage"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="16dp"
        android:contentDescription="Facility Profile Picture"
        android:scaleType="centerCrop"
        android:src="@drawable/account_circle"
        android:background="@drawable/edit_text_border"
        android:padding="12dp"/>
    <Button
        android:id="@+id/buttonSelectProfileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upload Profile Picture"
        android:drawableTint="@color/white"
        android:backgroundTint="@color/kennyBlue"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_gravity="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"></Space>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center|bottom">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:background="@drawable/rounded_box_blue"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="Contact Information: "
            android:textColor="@color/white"
            android:textSize="28dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Email:"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextFacilityEmail"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="example@email.com"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#80FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Phone:"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/editTextFacilityPhone"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="#FFFFFF"
                android:hint="1234567890"
                android:textColorHint="#80F0f0f0"
                android:padding="12dp"
                android:backgroundTint="@color/white"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Facility Name:"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextFacilityName"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#80FFFFFF"
                android:hint="Location"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Facility Address:"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextFacilityAddress"
                android:layout_width="227dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:inputType="textPostalAddress"
                android:padding="12dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#80FFFFFF"
                android:hint="Street, City, Province"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
</ScrollView>