...
        android:text="Choose your Profile:"
        android:textColor="#FFFFFF"
        android:textSize="36dp"
        android:layout_marginBottom="36dp" />

    <Button
        android:id="@+id/button_go_to_add_facility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:text="Organizer Profile"
        android:textSize="24dp"
...
